end ex5 and fix all bugs